--- a/Finsys/requirements.txt
+++ b/Finsys/requirements.txt
@@ -15,6 +15,7 @@ cryptography==42.0.0
 cssselect2==0.7.0
 Django==3.2.23
 django-bootstrap-datepicker-plus==5.0.4
+django-countries==7.6.1
 django-crispy-forms==2.0
 django-htmx==1.15.0
 django-mathfilters==1.0.0
